<resources>
    <string name="app_name">Travel Tours</string>
    <string name="action_settings">Configure</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tourist Recommander App</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="resort_action_add_book">Book</string>
    <string name="resort_action_view">View</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Preference Configures </string>

    <string name="pref_title_social_recommendations">Enable resorts recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for resorts based on your current loaction
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_display_amount">Amount To Spend</string>
    <string name="pref_default_amount_display">$ 200</string>



    <string name="pref_title_add_friends_to_messages">List resorts on locations</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>

    </string-array>


    <string name="pre_weather_updates">Allow Weather Update for</string>
    <string-array name="pref_weather_update_list">
        <item>Harare</item>
        <item>Bulawayo</item>
        <item>Gweru</item>
        <item>Mutare</item>
        <item>Victoria Falls</item>
        <item>Masvingo</item>
        <item>Kariba</item>
        <item>Bindura</item>
        <item>Kwekwe</item>
        <item>Matobos</item>

    </string-array>
    <string-array name="pref_weather_city_values">
        <item>Harare</item>
        <item>Bulawayo</item>
        <item>Gweru</item>
        <item>Mutare</item>
        <item>Victoria Falls</item>
        <item>Masvingo</item>
        <item>Kariba</item>
        <item>Bindura</item>
        <item>Kwekwe</item>
        <item>Matobos</item>

    </string-array>


    <string name="pre_service_type">Allow Resorts by Services</string>
    <string-array name="pref_resorts_service_list">
        <item>Hotels and Conference</item>
        <item>Game Reserves</item>
        <item>Recreational Services</item>


    </string-array>
    <string-array name="pref_resorts_service_values">
        <item>Hotel and Conference</item>
        <item>Game Reserves</item>
        <item>Recreational Services</item>


    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
